# EdudashPlatform

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  replit_zip_error_log.txt  theme.json
.local/state/replit/agent/: repl_state.json
client/src/: App.tsx
client/src/components/: AssignmentList.tsx  ScheduleManager.tsx  StudentList.tsx  TeacherStats.tsx
client/src/components/ui/: file-upload.tsx
client/src/pages/: AuthPage.tsx  HomePage.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
dashboard/: models.py  views.py
dashboard/migrations/: 0001_initial.py  0002_initial.py  0003_alter_schedule_options_assignment_attachment_and_more.py
dashboard/templates/dashboard/: dashboard.html
db/: schema.ts
edudash/: settings.py  urls.py  wsgi.py
server/: auth.ts  routes.ts
templates/: base.html
templates/users/: login.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_table.py  0003_customuser_bio_customuser_last_active_and_more.py  0004_customuser_password_changed_and_more.py
users/templates/users/: login.html  messages.html  profile.html  profile_edit.html  register.html  send_message.html
