[project]
name = "repl-nix-edudashplatform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.4",
    "django-crispy-forms>=2.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
]
